Replaced the icons with free to use ones

--- a/index.html
+++ b/index.html
@@ -22,15 +22,16 @@
 
         .tooltip {
             position: relative;
+            top: 0.5vh;
             display: inline-block;
             border-bottom: 1px dotted black;
 
-            background-image: url("media/info.png");
+            background-image: url("media/info.svg");
             background-position: center;
             background-repeat: no-repeat;
             background-size: contain;
-            width: 1.5vh;
-            height: 1.5vh;
+            width: 1.667vh;
+            height: 1.667vh;
         }
 
         .tooltip .tooltiptext {
