Fixed wrong GC flags info id

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
     const memoryInput = document.getElementById("memoryInput");
 
     const calculationResultElement = document.getElementById("result");
-    const gcFlagsElement = document.getElementById("gcFlags");
+    const gcFlagsElement = document.getElementById("gcFlagsInfo");
 
     function runRAMCalculation() {
         try {
