--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         #logo > img {
             height: calc(var(--height) * 0.8);
             width: calc(var(--height) * 0.8);
-            filter: saturate(0.6) brightness(0.95) contrast(0.95) drop-shadow(0 0 0.333vh #333);
+            /* filter: saturate(0.6) brightness(0.95) contrast(0.95) drop-shadow(0 0 0.333vh #333); */
         }
         @media screen and (orientation: portrait) {
             #calculatorContainer {
